fixed line-height issue on IE (2)

--- a/css/switchy.css
+++ b/css/switchy.css
@@ -13,6 +13,7 @@
 	transition: border-color 100ms;
 	outline: 0;
 	text-indent: 0;
+	line-height: 1.428571429;
 }
 .switchy.active
 {
